--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "wykop",
   "type": "module",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Wrapper for the new Wykop API v3 written in NodeJS",
   "homepage": "https://github.com/xxdeepfriedxx/wykop",
-  "license" : "SEE LICENSE IN LICENSE.md",
+  "license" : "SEE LICENSE IN LICENSE",
   "main": "wykop.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
