- ESLint config + code cleanup - improve Proxy wrapping for listings

--- a/package.json
+++ b/package.json
@@ -11,5 +11,37 @@
   "author": "xxdeepfriedxx",
   "dependencies": {
     "axios": "^0.27.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.47.0"
+  },
+  "eslintConfig": {
+    "env": {
+      "commonjs": true,
+      "es2021": true,
+      "node": true
+    },
+    "extends": "eslint:recommended",
+    "parserOptions": {
+      "ecmaVersion": "latest"
+    },
+    "rules": {
+      "indent": [
+        "error",
+        "tab"
+      ],
+      "linebreak-style": [
+        "error",
+        "unix"
+      ],
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "semi": [
+        "error",
+        "always"
+      ]
+    }
   }
 }
