- implement callback method for 2FA, w.handle2FACodeRequired() - add more methods (delete account, request gdpr data, user sessions, user apps) - added new methods to README - general cleanup - fix surveyVote()

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "SEE LICENSE IN LICENSE",
   "main": "wykop.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ."
   },
   "author": "xxdeepfriedxx",
   "dependencies": {
