- add minimum node version - remove atob/btoa

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "SEE LICENSE IN LICENSE",
   "main": "wykop.js",
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "author": "xxdeepfriedxx",
   "dependencies": {
@@ -14,6 +15,9 @@
   },
   "devDependencies": {
     "eslint": "^8.47.0"
+  },
+  "engines" : { 
+    "node": ">=14.21.3"
   },
   "eslintConfig": {
     "env": {
